fix: Use direct URL path for homepage link on logout page

--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -14,7 +14,7 @@
     </form>
 
     <div class="form-links">
-        <a href="{% url 'home' %}">Return to Homepage</a>
+        <a href="/">Return to Homepage</a>
     </div>
 </div>
 {% endblock %}
