--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1247,3 +1247,21 @@ input[type="checkbox"] {
   margin-bottom: 1.5rem;
   color: #666;
 }
+
+.form-intro {
+  text-align: center;
+  margin-bottom: 1.5rem;
+  color: #666;
+}
+
+.checkbox-group {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.checkbox-group label {
+  display: inline;
+  font-weight: normal;
+  margin-bottom: 0;
+}
