--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,42 +1,20 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Login - David Visuals{% endblock %}
+{% block title %}Logout - David Visuals{% endblock %}
 
 {% block content %}
 <div class="form-container">
-    <h1>Login</h1>
-    <p class="form-intro">Welcome back! Please login to your account.</p>
+    <h1>Logout</h1>
+    <p class="logout-text">Are you sure you want to logout?</p>
 
-    <form method="POST" action="{% url 'account_login' %}">
+    <form method="POST" action="{% url 'account_logout' %}">
         {% csrf_token %}
-
-        <div class="form-group">
-            <label for="id_login">Username or Email</label>
-            <input type="text" name="login" id="id_login" class="form-control" placeholder="Enter your username or email" required>
-        </div>
-
-        <div class="form-group">
-            <label for="id_password">Password</label>
-            <input type="password" name="password" id="id_password" class="form-control" placeholder="Enter your password" required>
-        </div>
-
-        <div class="form-group checkbox-group">
-            <input type="checkbox" name="remember" id="id_remember">
-            <label for="id_remember">Remember Me</label>
-        </div>
-
-        {% if form.errors %}
-        <div class="alert alert-error">
-            <p>Invalid username/email or password. Please try again.</p>
-        </div>
-        {% endif %}
-
-        <button type="submit" class="btn btn-primary btn-full">Login</button>
+        <button type="submit" class="btn btn-primary btn-full">Logout</button>
     </form>
 
     <div class="form-links">
-        <p>Don't have an account? <a href="{% url 'account_signup' %}">Sign Up</a></p>
+        <a href="/">Return to Homepage</a>
     </div>
 </div>
 {% endblock %}
