--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
         content="{% block twitter_description %}Professional graphic design services at fixed prices. Quality designs delivered fast.{% endblock %}">
     <title>{% block title %}David Visuals - Professional Graphic Design Services{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
-
+    <link rel="icon" type="image/png" href="{% static 'images/favicon-32x32.png' %}">
 </head>
 
 <body>
