--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -30,8 +30,10 @@
                     <input type="email" name="email" placeholder="Your email" required class="newsletter-input">
                     <button type="submit" class="btn btn-primary">Subscribe</button>
                 </form>
+                <p style="margin-top: 0.5rem; font-size: 0.85rem;">
+                    <a href="{% url 'newsletter:unsubscribe' %}" style="color: #ecf0f1;">Unsubscribe</a>
+                </p>
             </div>
-        </div>
         <div class="footer-bottom">
             <p>&copy; 2026 David Visuals. All rights reserved.</p>
         </div>
