--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -34,6 +34,7 @@
                     <a href="{% url 'newsletter:unsubscribe' %}" style="color: #ecf0f1;">Unsubscribe</a>
                 </p>
             </div>
+        </div>
         <div class="footer-bottom">
             <p>&copy; 2026 David Visuals. All rights reserved.</p>
         </div>
